--- a/src/component/Hero/Hero.scss
+++ b/src/component/Hero/Hero.scss
@@ -13,7 +13,7 @@
         display: flex;
         justify-content: flex-start;
         align-items: flex-end;
-        width: 100%;
+        // width: 100%;
         height: 100%;
         @include respond(tab-port) {
             justify-content: center;
