--- a/src/Pages/CardDetail/CardDetail.scss
+++ b/src/Pages/CardDetail/CardDetail.scss
@@ -118,9 +118,8 @@
 	}
 
 	.btn-buy {
-		margin-top: 5%;
+		margin: 5% 0;
 		width: 100%;
-
 		padding: 8px 0px;
 		background-color: $color1;
 		color: $fontcolor;
