--- a/src/Pages/Search/Search.scss
+++ b/src/Pages/Search/Search.scss
@@ -1,9 +1,10 @@
 @import '../../responsive/mixin';
 
 .search_page {
-
+    
     .search_display {
         display: flex;
+        padding: 50px;
 
         .one {
             display: flex;
