--- a/src/component/Register/Register.scss
+++ b/src/component/Register/Register.scss
@@ -17,6 +17,14 @@
 		  margin-right: 0px;
 		}
 	}
+
+	.eyefill {
+		height: 100%;
+		display: flex;
+		align-items: center;
+		cursor: pointer;
+		z-index: 1;
+	}
 	
 	.img_size {
 		display: flex;
@@ -75,6 +83,8 @@
 	
 	.input-div > div{
 		position: relative;
+		display: flex;
+		justify-content: flex-end;
 		height: 45px;
 		width: 100%;
 	}
