--- a/src/component/ProfileTab/EditProfile.scss
+++ b/src/component/ProfileTab/EditProfile.scss
@@ -13,10 +13,20 @@
 	// 		border-radius: 50%;
 	// 	}
 	// }
-	.editp-text {
-		font-size: 20px;
-		font-weight: 500;
-		text-align-last: right;
+
+	.modal-header {
+		display: flex;
+		align-items: center;
+
+		.editp-text {
+			font-size: 20px;
+			font-weight: 500;
+			text-align-last: right;
+			
+			p {
+				margin: 0;
+			}
+		}
 	}
 	.btnp-edit-div {
 		text-align: -webkit-right;
