--- a/src/component/ProfileTab/Profile.scss
+++ b/src/component/ProfileTab/Profile.scss
@@ -155,6 +155,7 @@
 			height: 100%;
 			border: 1px solid rgba(0,0,0,0.2);
 			position: relative;
+			text-align: left;
 
 			.ad_dis {
 				margin: 20px;
@@ -182,6 +183,10 @@
 					}
 				}
 			}
+
+			// @include respond(tab-port) {
+
+			// }
 		}
 
 
