--- a/src/component/Navigation/Navigation.scss
+++ b/src/component/Navigation/Navigation.scss
@@ -1,15 +1,16 @@
 @import '../../responsive/mixin.scss';
 @import '../../responsive/variables.scss';
 
-
 .navigation {
 	position: fixed;
 	min-height: 60px;
 	z-index: 10;
+	top: 0;
 	// font-family: "MV Boli";
 	background-image: linear-gradient(180deg, $color1, transparent);
 	// background-color: $color1;
 	color: $fontcolor;
+	transition: top 0.3s;
 
 	.img_display {
 		width: 40px;
