--- a/src/component/Navigation/Navigation.scss
+++ b/src/component/Navigation/Navigation.scss
@@ -58,13 +58,14 @@
 			pointer-events: inherit;
 			
 			@include respond(tab-port) {
-				transition: 0.5s;
+				transition: 0.3s;
 				position: absolute;
-				top: 0;
+				top: 0px;
 				left: 0;
 				width: 100%;
 				height: 100vh;
 				pointer-events: none;
+				z-index: 11;
 			}
 			
 			.nav-items {
@@ -77,6 +78,7 @@
 					width: 50%;
 					background-color: $color1;
 					position: absolute;
+					overflow-y: scroll;
 					left: -450px;
 				}
 
