--- a/src/component/ProfileTab/EditProfile.scss
+++ b/src/component/ProfileTab/EditProfile.scss
@@ -14,6 +14,31 @@
 	// 	}
 	// }
 
+	input[type="file"] {
+		display: none;
+	}
+
+	.whole_image {
+		display: flex;
+		position: relative;
+		border: 5px solid rgb(180, 180, 180);
+		border-radius: 50%;
+		margin-bottom: 10px;
+
+		.edit_btn {
+			position: absolute;
+			bottom: -5px;
+			right: 20px;
+			padding: 8px;
+			font-size: 20px;
+			margin: 0;
+			display: flex;
+			border-radius: 20px;
+			cursor: pointer;
+			background-color: rgb(180, 180, 180);
+		}
+	}
+
 	.modal-header {
 		display: flex;
 		align-items: center;
@@ -51,7 +76,6 @@
 		height: 150px;
 		width: 150px;
 		border-radius: 50%;
-		margin-bottom: 10px;
 		overflow: hidden;
 		background-color: rgba(0,0,0,0.2);
 
@@ -69,8 +93,8 @@
 		.col1-edit {
 			border-right: 0px;
 			img {
-					margin-bottom: 15px;
-				width: 50%;
+				margin-bottom: 15px;
+				// width: 50%;
 				height: 150px;
 			}
 		}
