--- a/src/component/Payment/Payment.scss
+++ b/src/component/Payment/Payment.scss
@@ -183,6 +183,9 @@
 		background-color: #7795f8;
 		box-shadow: none;
 	}
+	.input-feedback {
+        color: red;
+    }
 	
 	.ErrorMessage {
 		color: #fff;
