--- a/src/component/Cart/CartTotal.scss
+++ b/src/component/Cart/CartTotal.scss
@@ -64,5 +64,13 @@
 		color: $color1;
 		background-color: $color6;
 	}
+    .input_prom{
+  
+        border: 1px solid rgba(0,0,0,0.2);
+      width: 6em;
+        background-color: transparent;
+        outline: none;
+    }
+ 
 
 }
