--- a/src/Pages/AboutUs/AboutUs.scss
+++ b/src/Pages/AboutUs/AboutUs.scss
@@ -77,8 +77,8 @@
 		}
 		.about-text {
 		width: 100%;
-
-		font-size: 1px;
+		word-wrap: break-word;
+		font-size: 18px;
 		margin-right: 40%;
 		}
 		.title-text {
