--- a/src/component/ProductCard/ProductCard.scss
+++ b/src/component/ProductCard/ProductCard.scss
@@ -169,7 +169,7 @@
     .category{
         text-align: center;
         font-size: 18px;
-        padding: 5px 10px;
+        // padding: 5px 10px;
         line-height: 15px;
     }
 
