--- a/src/component/Payment/Mercadopagopay.scss
+++ b/src/component/Payment/Mercadopagopay.scss
@@ -118,7 +118,7 @@
 		}
 	}
 	.FormRowInput:-webkit-autofill {
-		-webkit-text-fill-color: #1f615b;
+		-webkit-text-fill-color: #085ba8;
 		/* Hack to hide the default webkit autofill */
 		transition: background-color 100000000s;
 		animation: 1ms void-animation-out;
